feat: implement to use record classes to property instead of @value annotation